--- a/custom_components/sunseeker/manifest.json
+++ b/custom_components/sunseeker/manifest.json
@@ -8,6 +8,6 @@
   "issue_tracker": "https://github.com/itsbrianburton/sunseeker-integration/issues",
   "integration_type": "device",
   "iot_class": "local_push",
-  "requirements": [],
+  "requirements": ["paho-mqtt==1.6.1"],
   "version": "1.0.0"
 }
